1.1.13i3:
    Core, Setup, etc.:
    * cmk -d does now honor --cache and --no-tcp
    * cmk -O/-R now uses omd re{start,load} core if using OMD
    * FIX: setup.sh now setups up permissions for conf.d/wato
      correctly
    * cmk --localize update supports an optional ALIAS which is used as
      display string in the multisite GUI

    Checks & Agents:
    * Windows agent: output eventlog texts in UTF-8 encoding. This
      should fix problems with german umlauts in message texts.
    * Windows agent: Added installer for the windows agent (install_agent.exe)
    * Disabled obsolete checks fc_brocade_port and fc_brocade_port_detailed.
      Please use brocade_fcport instead.
    * aironet_errors, statgrab_disk, statgrab_net: Performance data has
      been converted from counters to rates. You might need to delete your
      existing RRDs of these checks. Sorry, but these have been that last
      checks still using counters...
    * ibm_imm_health: added last missing scan function
    * Filesystem checks: trend performance data is now normalized to MB/24h.
      If you have changed the trend range, then your historic values will
      be displayed in a wrong scale. On the other hand - from now on changes
      in the range-setting will not affect the graph anymore.
    * if/if64/lnx_if: pad port numbers with zeros in order to sort correctly.
      This can be turned off with if_inventory_pad_portnumbers = False.
    * Linux agent: wrap freeipmi with lock in order to avoid cache corruption
    * New check: megaraid_bbu - check existance & status of LSI MegaRaid BBU module
    * HP-UX Agent: fix mrpe (remove echo -e and test -e, thanks to Philipp Lemke)

    Multisite:
    * Improve transaction handling and reload detection: user can have 
      multiple action threads in parallel now
    * Sounds in views are now enabled per default. The new configuration
      variable enable_sounds can be set to False in multisite.mk in order
      to disable sounds.