@@ -1,5 +1,8 @@
 1.1.13i3:
     Core, Setup, etc.:
+    * *_contactgroups lists: Single group rules are all appended. When a list
+      is found as a value this first list is used exclusively. All other
+      matching rules are ignored
     * cmk -d does now honor --cache and --no-tcp
     * cmk -O/-R now uses omd re{start,load} core if using OMD
     * FIX: setup.sh now setups up permissions for conf.d/wato
